# cog-mmaudio

./: .dockerignore  .gitignore  LICENSE  README.md  batch_eval.py  cog.yaml  demo.py  gradio_demo.py  predict.py  pyproject.toml  train.py
config/: base_config.yaml  eval_config.yaml  train_config.yaml
config/data/: base.yaml
config/eval_data/: base.yaml
config/hydra/job_logging/: custom-eval.yaml  custom-no-rank.yaml  custom-simplest.yaml  custom.yaml
docs/: EVAL.md  MODELS.md  TRAINING.md  index.html  style.css  style_videos.css  video_gen.html  video_main.html  video_vgg.html  video_vgg1.html  video_vgg2.html  videos.md
mmaudio/: eval_utils.py  runner.py  sample.py
mmaudio/data/: av_utils.py  data_setup.py  extracted_audio.py  extracted_vgg.py  mm_dataset.py  utils.py
mmaudio/data/eval/: audiocaps.py  moviegen.py  video_dataset.py
mmaudio/data/extraction/: vgg_sound.py  wav_dataset.py
mmaudio/ext/: mel_converter.py
mmaudio/ext/autoencoder/: __init__.py  autoencoder.py  vae.py  vae_modules.py
mmaudio/ext/bigvgan/: bigvgan.py  models.py
mmaudio/ext/bigvgan_v2/: bigvgan.py
mmaudio/ext/bigvgan_v2/alias_free_activation/torch/: act.py  resample.py
mmaudio/ext/synchformer/: __init__.py  motionformer.py  synchformer.py  video_model_builder.py
mmaudio/model/: embeddings.py  flow_matching.py  low_level.py  networks.py  sequence_config.py  transformer_layers.py
mmaudio/model/utils/: distributions.py  features_utils.py  parameter_groups.py  sample_utils.py
mmaudio/utils/: dist_utils.py  download_utils.py  email_utils.py  log_integrator.py  logger.py  synthesize_ema.py  tensor_utils.py  time_estimator.py  timezone.py  video_joiner.py
sets/: vgg-test.tsv  vgg-val.tsv
training/: example_audio.tsv  example_video.tsv  extract_audio_training_latents.py  extract_video_training_latents.py  partition_clips.py  train.py
training/example_audios/: 00008004.flac  00008009.flac
